Fix: Improve dark mode readability
Make text white in dark mode.

--- a/src/index.css
+++ b/src/index.css
@@ -79,6 +79,10 @@
     .text-muted {
       @apply text-dark-text-muted;
     }
+
+    .text-table {
+      @apply text-white;
+    }
   }
 }
 
